saucer-bindings/include/saucer/webview.h

    enum SAUCER_WEB_EVENT
    {
        SAUCER_WEB_EVENT_DOM_READY,
        SAUCER_WEB_EVENT_NAVIGATED,
        SAUCER_WEB_EVENT_NAVIGATE,
        SAUCER_WEB_EVENT_FAVICON,
        SAUCER_WEB_EVENT_TITLE,
        SAUCER_WEB_EVENT_LOAD,
    };
    enum SAUCER_LAUNCH
    {
        SAUCER_LAUNCH_SYNC,
        SAUCER_LAUNCH_ASYNC,
    };
    struct saucer_embedded_file;
    SAUCER_EXPORT void saucer_webview_embed_file(saucer_handle *, const char *name, saucer_embedded_file *file,
                                                 SAUCER_LAUNCH policy);
    SAUCER_EXPORT void saucer_webview_serve(saucer_handle *, const char *file);
    SAUCER_EXPORT void saucer_webview_clear_scripts(saucer_handle *);
    SAUCER_EXPORT void saucer_webview_clear_embedded(saucer_handle *);
    SAUCER_EXPORT void saucer_webview_clear_embedded_file(saucer_handle *, const char *file);
    SAUCER_EXPORT void saucer_webview_inject(saucer_handle *, saucer_script *script);
    SAUCER_EXPORT void saucer_webview_execute(saucer_handle *, const char *code);
    SAUCER_EXPORT void saucer_webview_handle_scheme(saucer_handle *, const char *name, saucer_scheme_handler handler,
                                                    SAUCER_LAUNCH policy);
    SAUCER_EXPORT void saucer_webview_handle_scheme_with_arg(saucer_handle *, const char *name,
                                                             saucer_scheme_handler_with_arg handler,
                                                             void *arg,
                                                             SAUCER_LAUNCH policy);
    SAUCER_EXPORT void saucer_webview_remove_scheme(saucer_handle *, const char *name);
    SAUCER_EXPORT void saucer_webview_clear(saucer_handle *, SAUCER_WEB_EVENT event);
    SAUCER_EXPORT void saucer_webview_remove(saucer_handle *, SAUCER_WEB_EVENT event, uint64_t id);
    /**
     * @note The @param callback should be a function pointer to a function matching the event, that is:
     * <return-type>(saucer_handle *, <params>...);
     *
     * Where "<return-type>" and "<params>..." are to be
     * substituted according to the given event signature (see the respective C++ header)
     *
     * @example web_event::title_changed => void(*)(saucer_handle *, const char *)
     */

    SAUCER_EXPORT void saucer_webview_once(saucer_handle *, SAUCER_WEB_EVENT event, void *callback);
    SAUCER_EXPORT void saucer_webview_once_with_arg(saucer_handle *, SAUCER_WEB_EVENT event, void *callback, void *arg);
    SAUCER_EXPORT uint64_t saucer_webview_on(saucer_handle *, SAUCER_WEB_EVENT event, void *callback);
    SAUCER_EXPORT uint64_t saucer_webview_on_with_arg(saucer_handle *, SAUCER_WEB_EVENT event, void *callback,
                                                      void *arg);
    /*[[sc::before_init]]*/ SAUCER_EXPORT void saucer_register_scheme(const char *name);