src/bindings.rs

unsafe extern "C" {
    pub fn saucer_webview_embed_file(
        arg1: *mut saucer_handle,
        name: *const ::std::os::raw::c_char,
        file: *mut saucer_embedded_file,
        policy: SAUCER_LAUNCH
    );
}
unsafe extern "C" {
    pub fn saucer_webview_serve(arg1: *mut saucer_handle, file: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn saucer_webview_clear_scripts(arg1: *mut saucer_handle);
}
unsafe extern "C" {
    pub fn saucer_webview_clear_embedded(arg1: *mut saucer_handle);
}
unsafe extern "C" {
    pub fn saucer_webview_clear_embedded_file(arg1: *mut saucer_handle, file: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn saucer_webview_inject(arg1: *mut saucer_handle, script: *mut saucer_script);
}
unsafe extern "C" {
    pub fn saucer_webview_execute(arg1: *mut saucer_handle, code: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn saucer_webview_handle_scheme(
        arg1: *mut saucer_handle,
        name: *const ::std::os::raw::c_char,
        handler: saucer_scheme_handler,
        policy: SAUCER_LAUNCH
    );
}
unsafe extern "C" {
    pub fn saucer_webview_handle_scheme_with_arg(
        arg1: *mut saucer_handle,
        name: *const ::std::os::raw::c_char,
        handler: saucer_scheme_handler_with_arg,
        arg: *mut ::std::os::raw::c_void,
        policy: SAUCER_LAUNCH
    );
}
unsafe extern "C" {
    pub fn saucer_webview_remove_scheme(arg1: *mut saucer_handle, name: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn saucer_webview_clear(arg1: *mut saucer_handle, event: SAUCER_WEB_EVENT);
}
unsafe extern "C" {
    pub fn saucer_webview_remove(arg1: *mut saucer_handle, event: SAUCER_WEB_EVENT, id: u64);
}
unsafe extern "C" {
    #[doc = " @note The @param callback should be a function pointer to a function matching the event, that is:\n <return-type>(saucer_handle *, <params>...);\n\n Where \"<return-type>\" and \"<params>...\" are to be\n substituted according to the given event signature (see the respective C++ header)\n\n @example web_event::title_changed => void(*)(saucer_handle *, const char *)"]
    pub fn saucer_webview_once(
        arg1: *mut saucer_handle,
        event: SAUCER_WEB_EVENT,
        callback: *mut ::std::os::raw::c_void
    );
}
unsafe extern "C" {
    pub fn saucer_webview_once_with_arg(
        arg1: *mut saucer_handle,
        event: SAUCER_WEB_EVENT,
        callback: *mut ::std::os::raw::c_void,
        arg: *mut ::std::os::raw::c_void
    );
}
unsafe extern "C" {
    pub fn saucer_webview_on(
        arg1: *mut saucer_handle,
        event: SAUCER_WEB_EVENT,
        callback: *mut ::std::os::raw::c_void
    ) -> u64;
}
unsafe extern "C" {
    pub fn saucer_webview_on_with_arg(
        arg1: *mut saucer_handle,
        event: SAUCER_WEB_EVENT,
        callback: *mut ::std::os::raw::c_void,
        arg: *mut ::std::os::raw::c_void
    ) -> u64;
}
unsafe extern "C" {
    pub fn saucer_register_scheme(name: *const ::std::os::raw::c_char);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct saucer_desktop {
    _unused: [u8; 0]
}
unsafe extern "C" {
    pub fn saucer_desktop_new(app: *mut saucer_application) -> *mut saucer_desktop;
}
unsafe extern "C" {
    pub fn saucer_desktop_free(arg1: *mut saucer_desktop);
}
unsafe extern "C" {
    pub fn saucer_desktop_open(arg1: *mut saucer_desktop, path: *const ::std::os::raw::c_char);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct saucer_picker_options {
    _unused: [u8; 0]
}
unsafe extern "C" {
    pub fn saucer_picker_options_new() -> *mut saucer_picker_options;
}
unsafe extern "C" {
    pub fn saucer_picker_options_free(arg1: *mut saucer_picker_options);
}
unsafe extern "C" {
    pub fn saucer_picker_options_set_initial(arg1: *mut saucer_picker_options, path: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn saucer_picker_options_add_filter(arg1: *mut saucer_picker_options, filter: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    #[doc = " @note The returned array will be populated with strings which are themselves dynamically allocated.\n\n To properly free the returned array you should:\n - Free all strings within the array\n - Free the array itself"]
    pub fn saucer_desktop_pick_file(
        arg1: *mut saucer_desktop,
        options: *mut saucer_picker_options
    ) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn saucer_desktop_pick_folder(
        arg1: *mut saucer_desktop,
        options: *mut saucer_picker_options
    ) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn saucer_desktop_pick_files(
        arg1: *mut saucer_desktop,
        options: *mut saucer_picker_options
    ) -> *mut *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn saucer_desktop_pick_folders(
        arg1: *mut saucer_desktop,
        options: *mut saucer_picker_options
    ) -> *mut *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn saucer_desktop_pick_files_with_size(
        arg1: *mut saucer_desktop,
        options: *mut saucer_picker_options,
        size: *mut usize
    ) -> *mut *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn saucer_desktop_pick_folders_with_size(
        arg1: *mut saucer_desktop,
        options: *mut saucer_picker_options,
        size: *mut usize
    ) -> *mut *mut ::std::os::raw::c_char;
}
pub const SAUCER_LAYOUT_SAUCER_LAYOUT_PORTRAIT: SAUCER_LAYOUT = 0;
pub const SAUCER_LAYOUT_SAUCER_LAYOUT_LANDSCAPE: SAUCER_LAYOUT = 1;
pub type SAUCER_LAYOUT = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct saucer_print_settings {
    _unused: [u8; 0]
}
unsafe extern "C" {
    pub fn saucer_print_settings_new() -> *mut saucer_print_settings;
}
unsafe extern "C" {
    pub fn saucer_print_settings_free(arg1: *mut saucer_print_settings);
}
unsafe extern "C" {
    pub fn saucer_print_settings_set_file(arg1: *mut saucer_print_settings, file: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn saucer_print_settings_set_orientation(arg1: *mut saucer_print_settings, orientation: SAUCER_LAYOUT);
}
unsafe extern "C" {
    pub fn saucer_print_settings_set_width(arg1: *mut saucer_print_settings, width: f64);
}
unsafe extern "C" {
    pub fn saucer_print_settings_set_height(arg1: *mut saucer_print_settings, height: f64);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct saucer_pdf {
    _unused: [u8; 0]
}
unsafe extern "C" {
    pub fn saucer_pdf_new(webview: *mut saucer_handle) -> *mut saucer_pdf;
}
unsafe extern "C" {
    pub fn saucer_pdf_free(arg1: *mut saucer_pdf);
}
unsafe extern "C" {
    pub fn saucer_pdf_save(arg1: *mut saucer_pdf, settings: *mut saucer_print_settings);
}
